--- a/src/app/home/functions/forecasting/forecasting.html
+++ b/src/app/home/functions/forecasting/forecasting.html
@@ -36,12 +36,12 @@
                     <ion-label color="primary">{{ parameters.labels[0] }}</ion-label>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.b2b" [placeholder]="parameters.labels[0]"
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forecast.b2b" [placeholder]="parameters.labels[0]"
                                type="number">
                     </ion-input>
                 </ion-col>
                 <ion-col size="6">
-                    <ion-range [(ngModel)]="forcast.b2b" max="1000000000" min="100000000" pin="true" snaps="true"
+                    <ion-range [(ngModel)]="forecast.b2b" max="1000000000" min="100000000" pin="true" snaps="true"
                                step="100000000" style="padding-top:0">
                         <ion-icon name="remove"></ion-icon>
                         <ion-icon name="add"></ion-icon>
@@ -53,12 +53,12 @@
                     <ion-label color="primary">{{ parameters.labels[1] }}</ion-label>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.b2c" [placeholder]="parameters.labels[1]"
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forecast.b2c" [placeholder]="parameters.labels[1]"
                                type="number">
                     </ion-input>
                 </ion-col>
                 <ion-col size="6">
-                    <ion-range [(ngModel)]="forcast.b2c" max="1000000000" min="100000000" pin="true" snaps="true"
+                    <ion-range [(ngModel)]="forecast.b2c" max="1000000000" min="100000000" pin="true" snaps="true"
                                step="100000000" style="padding-top:0">
                         <ion-icon name="remove" size="small" slot="left"></ion-icon>
                         <ion-icon name="add" slot="right"></ion-icon>
@@ -70,13 +70,13 @@
                     <ion-label color="primary">{{ parameters.labels[2] }}</ion-label>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-input (ionChange)="onChange()" [(ngModel)]="forcast.newoffering"
+                    <ion-input (ionChange)="onChange()" [(ngModel)]="forecast.newoffering"
                                [placeholder]="parameters.labels[2]"
                                type="number">
                     </ion-input>
                 </ion-col>
                 <ion-col size="6">
-                    <ion-range [(ngModel)]="forcast.newoffering" max="1000000000" min="100000000" pin="true"
+                    <ion-range [(ngModel)]="forecast.newoffering" max="1000000000" min="100000000" pin="true"
                                snaps="true" step="100000000" style="padding-top:0">
                     </ion-range>
                 </ion-col>
@@ -88,11 +88,11 @@
                     <ion-label color="primary">{{ parameters.labels[3] }}</ion-label>
                 </ion-col>
                 <ion-col size="3">
-                    <ion-input [(ngModel)]="forcast.total_disp" [placeholder]="parameters.labels[3]" disabled>
+                    <ion-input [(ngModel)]="forecast.total_disp" [placeholder]="parameters.labels[3]" disabled>
                     </ion-input>
                 </ion-col>
                 <ion-col size="6">
-                    <ion-range [(ngModel)]="forcast.total" disabled max="3000000000" min="100000000" pin="true"
+                    <ion-range [(ngModel)]="forecast.total" disabled max="3000000000" min="100000000" pin="true"
                                snaps="true" step="100000000" style="padding-top:0">
                     </ion-range>
                 </ion-col>
